--- a/react-test/src/app/App.css
+++ b/react-test/src/app/App.css
@@ -1,33 +1,53 @@
-.App {
+html,
+body,
+.root {
+  height: 100%;
+  width: 100%;
+  overflow: hidden;
+}
+
+.page {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+}
+
+.footer {
+  z-index: 9;
+  position: fixed;
+  width: 100%;
+  height: 50px;
+  background-color: red;
+  bottom: 0;
+  left: 0;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+}
+
+.footer > a {
+  line-height: 50px;
+  width: 100px;
   text-align: center;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-  pointer-events: none;
+/* simple - enter transition 300ms, exit 150ms */
+.fade-appear,
+.fade-enter {
+  transform: translateX(300px);
+  z-index: 1;
+}
+.fade-appear-active,
+.fade-enter.fade-enter-active {
+  transform: translateX(0);
+  transition: transform 300ms linear 150ms;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.fade-exit {
+  opacity: 1;
 }
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.fade-exit.fade-exit-active {
+  opacity: 0;
+  transition: opacity 150ms linear;
 }
