--- a/react-test/src/app/App.css
+++ b/react-test/src/app/App.css
@@ -4,12 +4,14 @@ body,
   height: 100%;
   width: 100%;
   overflow: hidden;
+  position: absolute;
 }
 
 .page {
   position: absolute;
   width: 100%;
   height: 100%;
+  padding-bottom: 50px;
 }
 
 .footer {
