--- a/react-test/src/app/App.css
+++ b/react-test/src/app/App.css
@@ -12,19 +12,15 @@ body,
   width: 100%;
   height: 100%;
   padding-bottom: 50px;
+  box-sizing: border-box;
 }
 
 .footer {
   z-index: 9;
   position: fixed;
   width: 100%;
-  height: 50px;
-  background-color: red;
   bottom: 0;
   left: 0;
-  display: flex;
-  flex-direction: row;
-  justify-content: space-around;
 }
 
 .footer > a {
