--- a/react-test/src/app/job/job.scss
+++ b/react-test/src/app/job/job.scss
@@ -1,13 +1,16 @@
-.content {
-  position: absolute;
-  width: 100%;
-  overflow: auto;
-  top: 82px;
-  left: 0;
-  bottom: 51px;
-}
-
-header {
-  position: relative;
-  z-index: 1;
+.job {
+  header {
+    position: relative;
+    z-index: 1;
+  }
+  .content {
+    position: absolute;
+    width: 100%;
+    overflow: auto;
+    top: 82px;
+    left: 0;
+    bottom: 0;
+    padding-bottom: 51px;
+    background-color: #f4f6f5;
+  }
 }
