--- a/react-test/src/app/job/topBar/topBar.scss
+++ b/react-test/src/app/job/topBar/topBar.scss
@@ -1,8 +1,10 @@
+@import '../../theme/theme.scss';
+
 .top-bar {
   width: 100%;
   height: 41px;
   line-height: 41px;
-  background-color: #40c9c3;
+  background-color: $cur-bg-color;
   padding: 0 10px;
   box-sizing: border-box;
   .tab {
@@ -19,6 +21,7 @@
       }
     }
   }
+
   .tools {
     float: right;
     .item {
